--- a/hw1/main_hw1_blank.ipynb
+++ b/hw1/main_hw1_blank.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 354,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 358,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,6 @@
     "    :return: if x_array = [x_1, x_2, ...], then return [f(x_1), f(x_2), ...]\n",
     "             where f is calculated wrt to the training data and tau\n",
     "    \"\"\"\n",
-    "    # TODO: implement this\n",
     "\n",
     "    f_new = []\n",
     "    for x in x_new:\n",
@@ -90,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 359,
    "metadata": {},
    "outputs": [
     {
@@ -102,17 +101,12 @@
     }
    ],
    "source": [
-    "# x_train = [1,2,3]\n",
-    "# y_train = [2,4,6]\n",
-    "# tau = 0.5\n",
-    "# kernel_helper(3,tau,x_train,y_train)\n",
-    "\n",
     "test_p1(kernel_regressor)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 360,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 362,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,10 +160,12 @@
     "    :param true: corresponding true values\n",
     "    :return: the mean squared error\n",
     "    \"\"\"\n",
-    "    # TODO: implement this\n",
+    "    \n",
     "    MSE = 0\n",
     "    for i in range(len(predictions)):\n",
     "        MSE += (predictions[i] - true[i])**2\n",
+    "\n",
+    "    MSE = MSE/len(predictions)\n",
     "\n",
     "    return MSE\n",
     "        "
@@ -177,16 +173,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 364,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tau = 1: loss = 48.681553913022945\n",
-      "tau = 50: loss = 46.45724792403363\n",
-      "tau = 2500: loss = 208.34717017451982\n"
+      "tau = 1: loss = 1.9472621565209178\n",
+      "tau = 50: loss = 1.8582899169613452\n",
+      "tau = 2500: loss = 8.333886806980793\n"
      ]
     }
    ],
@@ -602,8 +598,7 @@
     "  b = make_basis(year_train, part)\n",
     "  w = find_weights(b, temp_train)\n",
     "  xs_basis = make_basis(year_train, part)\n",
-    "\n",
-    "  sigma \n",
+    "  sigma = 1\n",
     "\n",
     "  train_log_nll = negative_log_likelihood(xs_basis, temp_train ,w , sigma)\n",
     "\n",
