--- a/hw1/main_hw1_blank.ipynb
+++ b/hw1/main_hw1_blank.ipynb
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 365,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,10 +225,6 @@
     "    knear = []\n",
     "    for i in range(k):\n",
     "        knear.append(y_train[sortnear[i][1]])\n",
-    "    # sortnear = np.argsort(nearest, axis=0)\n",
-    "    # knear = []\n",
-    "    # for i in range(k):\n",
-    "    #     knear.append(nearest[sortnear[i][1]][1])\n",
     "\n",
     "    knn = np.mean(knear)\n",
     "    \n",
@@ -258,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 366,
    "metadata": {},
    "outputs": [
     {
@@ -270,13 +266,12 @@
     }
    ],
    "source": [
-    "\n",
     "test_p2(predict_knn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 367,
    "metadata": {},
    "outputs": [
     {
@@ -321,16 +316,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 368,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "43.51500000000001\n",
-      "97.26915555555553\n",
-      "241.59933100826444\n"
+      "1.7406000000000004\n",
+      "3.8907662222222212\n",
+      "9.663973240330577\n"
      ]
     }
    ],
@@ -356,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 369,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 370,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 371,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 380,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 391,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,6 +519,7 @@
     "  for i in range(len(y_pred)):\n",
     "    MSE += math.pow(y_pred[i] - y[i], 2)\n",
     "\n",
+    "  MSE = MSE/len(y_pred)\n",
     "  return MSE\n",
     "\n",
     "def negative_log_likelihood(X,y,w, sigma):\n",
@@ -533,15 +529,14 @@
     "\n",
     "  NLL = 0\n",
     "  for i in range(len(y_pred)):\n",
-    "    NLL += np.log(\n",
-    "            (1 / sigma*((2*np.pi) ** .5))) * np.exp(-((y[i]-y_pred[i])**2) / (2*(sigma**2)))\n",
+    "    NLL += np.log((1 / math.sqrt(math.pow(sigma,2)*2*np.pi)) * np.exp(-math.pow(y[i]-y_pred[i],2) / 2*math.pow(sigma,2)))\n",
     "          \n",
-    "  return NLL\n"
+    "  return -NLL\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 392,
    "metadata": {},
    "outputs": [
     {
@@ -551,27 +546,27 @@
       "\n",
       "Part (a);\n",
       "\n",
-      " Train MSE: 275.36; Test MSE: 198.99\n",
+      " Train MSE: 4.83; Test MSE: 7.96\n",
       "\n",
-      " Train Negative Log-Likelihood: 181.000; Test Negative Log-Likelihood: 181.000\n",
+      " Train Negative Log-Likelihood: 762.399; Test Negative Log-Likelihood: 523.304\n",
       "\n",
       "Part (b);\n",
       "\n",
-      " Train MSE: 240.56; Test MSE: 193.89\n",
+      " Train MSE: 4.22; Test MSE: 7.76\n",
       "\n",
-      " Train Negative Log-Likelihood: 181.000; Test Negative Log-Likelihood: 181.000\n",
+      " Train Negative Log-Likelihood: 601.027; Test Negative Log-Likelihood: 450.117\n",
       "\n",
       "Part (c);\n",
       "\n",
-      " Train MSE: 164.11; Test MSE: 149.18\n",
+      " Train MSE: 2.88; Test MSE: 5.97\n",
       "\n",
-      " Train Negative Log-Likelihood: 181.000; Test Negative Log-Likelihood: 181.000\n",
+      " Train Negative Log-Likelihood: 318.767; Test Negative Log-Likelihood: 250.941\n",
       "\n",
       "Part (d);\n",
       "\n",
-      " Train MSE: 36.66; Test MSE: 1472.66\n",
+      " Train MSE: 0.64; Test MSE: 58.91\n",
       "\n",
-      " Train Negative Log-Likelihood: 181.000; Test Negative Log-Likelihood: 181.000\n"
+      " Train Negative Log-Likelihood: 51.594; Test Negative Log-Likelihood: 491.076\n"
      ]
     }
    ],
@@ -597,12 +592,18 @@
     "\n",
     "  b = make_basis(year_train, part)\n",
     "  w = find_weights(b, temp_train)\n",
+    "  sigma = math.sqrt(train_mse)\n",
+    "\n",
     "  xs_basis = make_basis(year_train, part)\n",
-    "  sigma = 1\n",
+    "  train_log_nll = negative_log_likelihood(xs_basis, temp_train , w , sigma)\n",
     "\n",
-    "  train_log_nll = negative_log_likelihood(xs_basis, temp_train ,w , sigma)\n",
     "\n",
-    "  test_log_nll = 181\n",
+    "  b = make_basis(year_train, part)\n",
+    "  w = find_weights(b, temp_train)\n",
+    "  sigma = math.sqrt(train_mse)\n",
+    "  \n",
+    "  xs_basis = make_basis(year_test, part)\n",
+    "  test_log_nll = negative_log_likelihood(xs_basis, temp_test, w, sigma)\n",
     "  print(f\" Train Negative Log-Likelihood: {train_log_nll:.3f}; Test Negative Log-Likelihood: {test_log_nll:.3f}\")"
    ]
   },
