--- a/hw1/hw1.tex
+++ b/hw1/hw1.tex
@@ -541,6 +541,17 @@ This question is a conceptual question, and you are not required to implement th
   \end{enumerate}
 \end{solution}
 
+
+\begin{figure}
+  \includegraphics[angle=270,width=\linewidth]{P1WrittenWork.JPG}
+\end{figure}
+\begin{figure}
+  \includegraphics[angle=270,width=\linewidth]{P2WrittenWork.JPG}
+\end{figure}
+\begin{figure}
+  \includegraphics[angle=270,width=\linewidth]{P3WrittenWork.JPG}
+\end{figure}
+
 \newpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Name and Calibration
