--- a/hw2/hw2.tex
+++ b/hw2/hw2.tex
@@ -4,6 +4,9 @@
 \course{CS181-S23}
 \assignment{Assignment \#2}
 \duedate{11:59pm EST, Feb 23th, 2023}
+\name{Aidan Tai}
+\email{aidantai@college.harvard.edu}
+\collaborators{None}
 
 \usepackage[OT1]{fontenc}
 \usepackage[colorlinks,citecolor=blue,urlcolor=blue]{hyperref}
@@ -313,12 +316,13 @@ Since testing on a larger patient population is expensive for various reasons, t
 % Name and Calibration
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection*{Name}
+Aidan Tai
 
 \subsection*{Collaborators and Resources}
-Whom did you work with, and did you use any resources beyond cs181-textbook and your notes?
+No collaborators, used section and office hours
 
 \subsection*{Calibration}
-Approximately how long did this homework take you to complete (in hours)?
+0
 
 
 
