--- a/hw2/hw2.tex
+++ b/hw2/hw2.tex
@@ -122,6 +122,7 @@ Repeat this process (reporting the first model's classification probability and 
 \end{problem}
  \let\cleardoublepage\clearpage
 
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Problem 2
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -310,6 +311,17 @@ Since testing on a larger patient population is expensive for various reasons, t
 \end{framed}
 
 \newpage
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Solution 2
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{sol}{}{1}
+  \begin{enumerate}
+    \item See notebook
+    \item 
+  \end{enumerate}
+
+\end{sol}
 
 \newpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
