--- a/hw2/main_hw2_blank.ipynb
+++ b/hw2/main_hw2_blank.ipynb
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,6 +705,10 @@
     "        self.X = None\n",
     "        self.y = None\n",
     "        self.K = k\n",
+    "\n",
+    "    def distance(self, a, b):\n",
+    "        # two inputs a, b both with shape (d,) = (2,)\n",
+    "        return (a[0] - b[0])**2/9 + (a[1] - b[1])**2\n",
     "        \n",
     "    def fit(self, X, y):\n",
     "        \"\"\"\n",
@@ -728,11 +732,63 @@
     "                 Shape should be (n,)\n",
     "        \"\"\"\n",
     "        # TODO\n",
-    "        preds = []\n",
-    "        for x in X_pred:\n",
-    "            z = np.cos(x ** 2).sum()\n",
-    "            preds.append(1 + np.sign(z) * (np.abs(z) > 0.3))\n",
-    "        return np.array(preds)"
+    "        # preds = []\n",
+    "        # for x in X_pred:\n",
+    "        #     z = np.cos(x ** 2).sum()\n",
+    "        #     preds.append(1 + np.sign(z) * (np.abs(z) > 0.3))\n",
+    "        # return np.array(preds)\n",
+    "\n",
+    "            # CONCEPTUALIZING KNN CLASSIFICATION\n",
+    "\n",
+    "        # pred for one data point X[n] (d,) = x_n (d,1)\n",
+    "        # dist calc for two data points x_1, x_2 = dist(X[1],X[2]) \n",
+    "        # dist = (1,)\n",
+    "        # dist(X[a], X[b]) = (X[a][0] - X[b][0])**2/9 + (X[a][1] - X[b][1])**2\n",
+    "        \n",
+    "        # calculate kNN for each observation x in X_pred\n",
+    "        preds = np.zeros(X_pred.shape[0])\n",
+    "        for n in range(X_pred.shape[0]): # (d,)\n",
+    "            # nearest = []\n",
+    "            # for i in range(X_pred.shape[0]):\n",
+    "            #     if n != i:\n",
+    "            #         d = self.dist(X_pred[n], X_pred[i])\n",
+    "            #         nearest.append((d,i))\n",
+    "            \n",
+    "            # sorted array of dist and n index\n",
+    "            # sortnear = sorted(nearest, key=lambda x: x[0], reverse=True)\n",
+    "            # key = sort by minimizing dist value\n",
+    "            # lambda x: dist between X[n] and x\n",
+    "            indices = range(self.X.shape[0])\n",
+    "            argsortnear = sorted(indices, key = lambda x: self.distance(X_pred[n], self.X[x]))\n",
+    "        \n",
+    "            # knear = []\n",
+    "            # for i in range(self.K):\n",
+    "                # # find majority class of knn for x\n",
+    "                # n_index = sortnear[i][1]\n",
+    "                # knear.append(self.y[n_index])\n",
+    "                # knear.append(sortnear[i][1])\n",
+    "\n",
+    "            # indices of the k nearest neighbors to X_pred selected from self.X (k,)\n",
+    "            argknear = argsortnear[0:self.K]\n",
+    "\n",
+    "            neighborclasses = []\n",
+    "            for k in argknear:\n",
+    "                nclass = self.y[k]\n",
+    "                neighborclasses.append(nclass)\n",
+    "\n",
+    "            \n",
+    "\n",
+    "            from collections import Counter\n",
+    "            # count with one-hot encoding\n",
+    "            neighborclasses.count\n",
+    "            maj = max(set(neighborclasses), key = neighborclasses.count)\n",
+    "            # counts = np.bincount(np.array(neighborclasses))\n",
+    "            # maj = np.argmax(counts)\n",
+    "\n",
+    "            pred = maj\n",
+    "            preds[n] = pred\n",
+    "            \n",
+    "        return preds\n"
    ]
   },
   {
@@ -773,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -906,23 +962,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
+     "ename": "AssertionError",
+     "evalue": "Failed for basis regression: incorrect weights",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[235], line 7\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# test your models by passing your fitted models into the functions below\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39m# softmax_model is an instance of class SoftmaxRegression fitted to data X_stars, y_stars\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39m# basis_model is an instance of class SoftmaxRegression fitted to data phi(X_stars), y_stars\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39m# knn1_model is an instance of class KNNClassifier with parameter k=1\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39m# knn5_model is an instance of class KNNClassifier with parameter k=5\u001b[39;00m\n\u001b[1;32m      6\u001b[0m bias_model \u001b[39m=\u001b[39m SoftmaxRegression(eta\u001b[39m=\u001b[39m\u001b[39m0.001\u001b[39m, lam\u001b[39m=\u001b[39m\u001b[39m0.001\u001b[39m)\n\u001b[0;32m----> 7\u001b[0m bias_model\u001b[39m.\u001b[39;49mfit(bias_basis(X_stars), y_stars)\n\u001b[1;32m      9\u001b[0m basis_model \u001b[39m=\u001b[39m SoftmaxRegression(eta\u001b[39m=\u001b[39m\u001b[39m0.001\u001b[39m, lam\u001b[39m=\u001b[39m\u001b[39m0.001\u001b[39m)\n\u001b[1;32m     10\u001b[0m basis_model\u001b[39m.\u001b[39mfit(bias_basis(phi(X_stars)), y_stars)\n",
-      "Cell \u001b[0;32mIn[226], line 40\u001b[0m, in \u001b[0;36mSoftmaxRegression.fit\u001b[0;34m(self, X, y)\u001b[0m\n\u001b[1;32m     38\u001b[0m grads \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mzeros(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mW\u001b[39m.\u001b[39mshape) \u001b[39m#(k,d)\u001b[39;00m\n\u001b[1;32m     39\u001b[0m \u001b[39mfor\u001b[39;00m n \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(X\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m]):\n\u001b[0;32m---> 40\u001b[0m     prob \u001b[39m=\u001b[39m softmax(preds[n]) \u001b[39m# preds[n]: (k,)\u001b[39;00m\n\u001b[1;32m     41\u001b[0m     \u001b[39m# probs.append(prob)\u001b[39;00m\n\u001b[1;32m     42\u001b[0m     \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mW\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m]):\n",
-      "File \u001b[0;32m/usr/local/lib/python3.10/site-packages/scipy/special/_logsumexp.py:225\u001b[0m, in \u001b[0;36msoftmax\u001b[0;34m(x, axis)\u001b[0m\n\u001b[1;32m    223\u001b[0m x_max \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mamax(x, axis\u001b[39m=\u001b[39maxis, keepdims\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m    224\u001b[0m exp_x_shifted \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mexp(x \u001b[39m-\u001b[39m x_max)\n\u001b[0;32m--> 225\u001b[0m \u001b[39mreturn\u001b[39;00m exp_x_shifted \u001b[39m/\u001b[39m np\u001b[39m.\u001b[39;49msum(exp_x_shifted, axis\u001b[39m=\u001b[39;49maxis, keepdims\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n",
-      "File \u001b[0;32m<__array_function__ internals>:200\u001b[0m, in \u001b[0;36msum\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
-      "File \u001b[0;32m/usr/local/lib/python3.10/site-packages/numpy/core/fromnumeric.py:2324\u001b[0m, in \u001b[0;36msum\u001b[0;34m(a, axis, dtype, out, keepdims, initial, where)\u001b[0m\n\u001b[1;32m   2321\u001b[0m         \u001b[39mreturn\u001b[39;00m out\n\u001b[1;32m   2322\u001b[0m     \u001b[39mreturn\u001b[39;00m res\n\u001b[0;32m-> 2324\u001b[0m \u001b[39mreturn\u001b[39;00m _wrapreduction(a, np\u001b[39m.\u001b[39;49madd, \u001b[39m'\u001b[39;49m\u001b[39msum\u001b[39;49m\u001b[39m'\u001b[39;49m, axis, dtype, out, keepdims\u001b[39m=\u001b[39;49mkeepdims,\n\u001b[1;32m   2325\u001b[0m                       initial\u001b[39m=\u001b[39;49minitial, where\u001b[39m=\u001b[39;49mwhere)\n",
-      "File \u001b[0;32m/usr/local/lib/python3.10/site-packages/numpy/core/fromnumeric.py:69\u001b[0m, in \u001b[0;36m_wrapreduction\u001b[0;34m(obj, ufunc, method, axis, dtype, out, **kwargs)\u001b[0m\n\u001b[1;32m     58\u001b[0m     \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[1;32m     59\u001b[0m         \u001b[39m# A TypeError occurs if the object does have such a method in its\u001b[39;00m\n\u001b[1;32m     60\u001b[0m         \u001b[39m# class, but its signature is not identical to that of NumPy's. This\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     64\u001b[0m         \u001b[39m# Call _wrapit from within the except clause to ensure a potential\u001b[39;00m\n\u001b[1;32m     65\u001b[0m         \u001b[39m# exception has a traceback chain.\u001b[39;00m\n\u001b[1;32m     66\u001b[0m         \u001b[39mreturn\u001b[39;00m _wrapit(obj, method, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwds)\n\u001b[0;32m---> 69\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_wrapreduction\u001b[39m(obj, ufunc, method, axis, dtype, out, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[1;32m     70\u001b[0m     passkwargs \u001b[39m=\u001b[39m {k: v \u001b[39mfor\u001b[39;00m k, v \u001b[39min\u001b[39;00m kwargs\u001b[39m.\u001b[39mitems()\n\u001b[1;32m     71\u001b[0m                   \u001b[39mif\u001b[39;00m v \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m np\u001b[39m.\u001b[39m_NoValue}\n\u001b[1;32m     73\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mtype\u001b[39m(obj) \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m mu\u001b[39m.\u001b[39mndarray:\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[296], line 12\u001b[0m\n\u001b[1;32m      9\u001b[0m basis_model \u001b[39m=\u001b[39m SoftmaxRegression(eta\u001b[39m=\u001b[39m\u001b[39m0.001\u001b[39m, lam\u001b[39m=\u001b[39m\u001b[39m0.000\u001b[39m)\n\u001b[1;32m     10\u001b[0m basis_model\u001b[39m.\u001b[39mfit(bias_basis(phi(X_stars)), y_stars)\n\u001b[0;32m---> 12\u001b[0m test_p3_softmax(softmax_model, basis_model)\n\u001b[1;32m     13\u001b[0m \u001b[39m# test_p3_knn(knn1_model, knn5_model)\u001b[39;00m\n",
+      "File \u001b[0;32m~/Documents/Github/cs181/cs181-s23-homeworks/hw2/T2_P3_TestCases.py:24\u001b[0m, in \u001b[0;36mtest_p3_softmax\u001b[0;34m(vanilla_model, basis_model)\u001b[0m\n\u001b[1;32m     21\u001b[0m student_basis_weights \u001b[39m=\u001b[39m basis_model\u001b[39m.\u001b[39mW\n\u001b[1;32m     23\u001b[0m \u001b[39massert\u001b[39;00m np\u001b[39m.\u001b[39mallclose(student_v_weights, vanilla_weights, atol\u001b[39m=\u001b[39m\u001b[39m0.3\u001b[39m), \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mFailed for softmax regression: incorrect weights\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m---> 24\u001b[0m \u001b[39massert\u001b[39;00m np\u001b[39m.\u001b[39mallclose(student_basis_weights, basis_weights, atol\u001b[39m=\u001b[39m\u001b[39m0.3\u001b[39m), \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mFailed for basis regression: incorrect weights\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     26\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mPassed softmax regression tests\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[0;31mAssertionError\u001b[0m: Failed for basis regression: incorrect weights"
      ]
     }
    ],
@@ -940,6 +992,75 @@
     "\n",
     "test_p3_softmax(softmax_model, basis_model)\n",
     "# test_p3_knn(knn1_model, knn5_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 328,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Passed KNN tests\n"
+     ]
+    }
+   ],
+   "source": [
+    "knn1_model = KNNClassifier(1)\n",
+    "knn1_model.fit(X_stars, y_stars)\n",
+    "\n",
+    "knn5_model = KNNClassifier(5)\n",
+    "knn5_model.fit(X_stars, y_stars)\n",
+    "\n",
+    "test_p3_knn(knn1_model, knn5_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 329,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "visualize_boundary(model=knn1_model,\n",
+    "                   X=X_stars,\n",
+    "                   y=y_stars,\n",
+    "                   title='knn1_regression_result',\n",
+    "                   basis=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 325,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'reshape'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[325], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m visualize_boundary(model\u001b[39m=\u001b[39;49mknn5_model,\n\u001b[1;32m      2\u001b[0m                    X\u001b[39m=\u001b[39;49mX_stars,\n\u001b[1;32m      3\u001b[0m                    y\u001b[39m=\u001b[39;49my_stars,\n\u001b[1;32m      4\u001b[0m                    title\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mknn1_regression_result\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[1;32m      5\u001b[0m                    basis\u001b[39m=\u001b[39;49m\u001b[39mNone\u001b[39;49;00m)\n",
+      "Cell \u001b[0;32mIn[303], line 22\u001b[0m, in \u001b[0;36mvisualize_boundary\u001b[0;34m(model, X, y, title, basis, width)\u001b[0m\n\u001b[1;32m     20\u001b[0m Y_hat \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39mpredict(X_pred) \u001b[39m# (n,)\u001b[39;00m\n\u001b[1;32m     21\u001b[0m \u001b[39m# print(\"Y_hat:\",Y_hat)\u001b[39;00m\n\u001b[0;32m---> 22\u001b[0m Y_hat \u001b[39m=\u001b[39m Y_hat\u001b[39m.\u001b[39;49mreshape((xx\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m], xx\u001b[39m.\u001b[39mshape[\u001b[39m1\u001b[39m])) \u001b[39m# ()\u001b[39;00m\n\u001b[1;32m     24\u001b[0m \u001b[39m# Visualize them.\u001b[39;00m\n\u001b[1;32m     25\u001b[0m cmap \u001b[39m=\u001b[39m c\u001b[39m.\u001b[39mListedColormap([\u001b[39m'\u001b[39m\u001b[39mr\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mb\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mg\u001b[39m\u001b[39m'\u001b[39m])\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'reshape'"
+     ]
+    }
+   ],
+   "source": [
+    "visualize_boundary(model=knn5_model,\n",
+    "                   X=X_stars,\n",
+    "                   y=y_stars,\n",
+    "                   title='knn1_regression_result',\n",
+    "                   basis=None)"
    ]
   },
   {
